feat: Implement the delete node action - EXO-63071 - Meeds-io/meeds#51